option java_package = "com.wali.live.proto.RedEnvelope";

/**

java -jar -Dfile.encoding=UTF-8 ./proto/wire-compiler-2.3.0-SNAPSHOT-jar-with-dependencies.jar \
--proto_path=./proto --java_out=./modulewatch/src/main/java-gen-pb/ RedEnvelope.proto

*/

//平台类型
enum Platform{
 IOS  = 1;
 ANDROID = 2;
}
//抢到红包的用户
message Winner {
    required uint64     userId          = 1; // 用户uuid
    optional string     nickname        = 2; // 用户昵称
    optional uint32     level           = 3; // 用户等级
    optional uint32     gain            = 4; // 用户抢红包赚取钻石数
    optional uint64     timestamp       = 5; // 时间戳
    optional uint64     avatar          = 6; // 头像
}
//命令字：zhibo.bank.grabenvelop
//抢红包请求
message GrabEnvelopReq {
    required uint64     userId              = 1; // 用户id，uuid
    required string     redEnvelopId        = 2; // 红包id
    optional string     room_id             = 3; //房间id
}

//抢红包返回结果
message GrabEnvelopRsp {
    required uint32 retCode         = 1; // 返回码
    optional string errMsg          = 2; // 错误提示说明
    optional uint64 userId          = 3; // 用户id，uuid
    optional string redEnvelopId    = 4; // 红包id
    optional uint32 gain            = 5; // 赚取的钻数
    optional uint64 timestamp       = 6; // 时间戳
    optional uint64 gemExpire       = 7; // 虚拟钻有效期

    //-----用户账户余额------
    repeated GiftCard   gift_cards                    = 8;
    optional uint32 ios_usable_gem_cnt                = 9;
    optional uint32 and_usable_gem_cnt                = 10;
    optional uint64 user_asset_timestamp              = 11;
    optional uint32 usable_virtual_gem_cnt            = 12;//当前可用虚拟钻数量
}
message GiftCard{
    optional uint32 gift_id         = 1;//礼品卡可兑换的礼物Id
    optional uint32 gift_card_cnt   = 2;//礼品卡数量
    optional uint64 begin_time      = 3;//礼品卡有效期开始时间,单位s
    optional uint64 end_time        = 4;//礼品卡有效期结束时间,单位s
    optional uint32 active_id       = 5;//指定活动id,只有参加这个活动的主播才可以使用
}
//命令字：zhibo.bank.getenvelop
//获取红包列表请求
message GetEnvelopReq {
    required uint64 userId          = 1; // 用户id，uuid
    required string redEnvelopId    = 2; // 红包id
}
//获取红包列表返回结果
message GetEnvelopRsp {
    required uint32 retCode         = 1; // 返回码
    optional string errMsg          = 2; // 错误提示说明
    optional uint64 userId          = 3; // 用户id，uuid
    optional string redEnvelopId    = 4; // 红包id
    repeated Winner winners         = 5; // 红包列表信息
    optional uint64 timestamp       = 6; // 时间戳
    optional uint32 topShowCnt      = 7;// 客户端显示winner个数
}
//命令字:zhibo.bank.createnvelop
//创建红包请求
message CreateRedEnvelopReq {
    required uint64 userId          = 1; // 用户id
    required string roomId          = 2; // 房间id
    required string client_id       = 3; // 客户端防重放
    required string msg             = 4; // 红包描述信息
    required uint32 gemCnt          = 5; // 红包总钻石数
    optional uint32 packageCnt      = 6; // 红包总数
    required Platform platform      = 7; // 平台
    optional uint64 zuid            = 8; // 主播id
    optional uint32 viewer_cnt      = 9; //观众数
}
//创建红包返回
message CreateRedEnvelopRsp {
    required uint32 retCode         = 1; // 返回码
    optional string errMsg          = 2; // 错误提示说明
    optional string redEnvelopId    = 3; // 红包id
}
//拉取红包配置信息请求
//命令字:zhibo.bank.getenvelopsetting
message GetRedEnvelopSettingReq {
    required uint64 userId          = 1; // 用户id
    required Platform platform      = 2; // 平台
    optional uint64 zuid            = 3; // 主播id
    optional string room_id         = 4; //房间id
    optional uint32 version         = 5;
    optional uint32 viewer_cnt      = 6;//观众数
}
//拉取红包配置信息返回
message GetRedEnvelopSettingRsp {
    required uint32 retCode             = 1; // 返回码
    optional string errMsg              = 2; // 错误提示说明
    repeated uint32 gems                = 3; // 红包金额列表
    optional uint32 avgGem              = 4; // 红包平均金额
    optional uint32 packageCntLimit     = 5; // 红包个数上限
    optional uint32 gemCntLimit         = 6; // 总钻石数上限
    optional uint32 gemCntLowerLimit    = 7; // 总钻石数下限
    optional uint32 packageCntLowerLimit     = 8; // 红包个数下限
    repeated uint32 package_leveld      = 9;//红包金额对应的等级，和gems对应
}
//红包Push
message NotifyRedEnvelop {
    required uint64 userId              = 1; // 用户id
    required string roomId              = 2; // 房间id
    required string redEnvelopId        = 3; // 红包id
    optional string msg                 = 4; // 红包宣言
    optional string nickname            = 5; // 用户昵称
    optional uint32 level               = 6; // 用户等级
    optional uint64 avatar              = 7; // 头像
    optional string client_id           = 8; // 透传cid
    optional uint32 gem_cnt             = 9; // 红包总金额
    optional uint32	envelop_level	 = 10;//1-小型红包，2-中型红包，3-大型红包
}